--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+
+body{
+  margin: 0;
+  padding:10px;
+}
 .App {
   text-align: center;
 }
@@ -5,6 +10,13 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+.instructions{
+  display:flex;
+  flex-direction:row ;
+  align-items: center;
+  gap:10px;
+
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -35,4 +47,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+.thumb{
+  width:150px;
+  height:auto;
 }
